--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
+    "@testing-library/jest-native": "^4.0.4",
+    "@testing-library/react-native": "^8.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.4",
     "@types/react-test-renderer": "^17.0.1",
@@ -36,6 +38,7 @@
     "metro-react-native-babel-preset": "^0.66.2",
     "prettier": "^2.4.1",
     "react-test-renderer": "17.0.2",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
   },
   "resolutions": {
