--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest --coverage",
-    "lint": "eslint 'src/**' --max-warnings=0",
+    "test": "jest",
+    "lint": "eslint",
     "lintFix": "eslint ./ --fix",
     "postinstall": "husky install"
   },
@@ -18,9 +18,15 @@
     ]
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.11",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.24.0",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.9.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
@@ -47,6 +53,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
     "jest": "^26.6.3",
+    "jest-transform-stub": "^2.0.0",
     "metro-react-native-babel-preset": "^0.66.2",
     "prettier": "^2.4.1",
     "react-test-renderer": "17.0.2",
