chore: finish unit tests config

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
+    "test-report": "jest --coverage",
     "lint": "eslint",
     "lintFix": "eslint ./ --fix",
     "postinstall": "husky install"
@@ -21,6 +22,7 @@
     "@react-native-async-storage/async-storage": "^1.15.11",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
     "react": "17.0.2",
     "react-native": "0.66.3",
@@ -33,6 +35,7 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@testing-library/jest-native": "^4.0.4",
+    "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/react-native": "^8.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.4",
@@ -53,6 +56,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
     "jest": "^26.6.3",
+    "jest-styled-components": "^7.0.6",
     "jest-transform-stub": "^2.0.0",
     "metro-react-native-babel-preset": "^0.66.2",
     "prettier": "^2.4.1",
